--- a/src/styles/pricing.css
+++ b/src/styles/pricing.css
@@ -14,7 +14,7 @@
     grid-template-columns: 1fr;
     gap: 20px;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -100,15 +100,19 @@ li::before {
         grid-template-columns: repeat(3, 1fr);
         align-items: center;
         gap: 0px;
+        justify-content: center;
+        column-gap: 0;
     }
 
     .pricing-card {
-        width: 300px;
+        /* width: 300px; */
+        width: 100%;
         height: 650px;
     }
 
     .pricing-card-premium {
-        width: 350px;
+        /* width: 350px; */
+        width: 100%;
         height: 700px;
         z-index: 1;
     }
